--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "^5.1.1",
     "@vitejs/plugin-vue": "^5.2.1",
     "vite": "^6.2.0"
   }
