--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.5",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.9",
+    "js-cookie": "^3.0.5",
     "pinia": "^3.0.2",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
