--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.9",
     "js-cookie": "^3.0.5",
+    "laravel-echo": "^2.1.4",
     "pinia": "^3.0.2",
+    "pusher-js": "^8.4.0",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.0"
