--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tato30/vue-pdf": "^1.11.3",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
@@ -16,11 +17,14 @@
     "chart.js": "^4.4.9",
     "js-cookie": "^3.0.5",
     "laravel-echo": "^2.1.4",
+    "pdfjs-dist": "^2.16.105",
     "pinia": "^3.0.2",
     "pusher-js": "^8.4.0",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
-    "vue-router": "^4.5.0"
+    "vue-pdf": "^4.3.0",
+    "vue-router": "^4.5.0",
+    "vue3-pdf-app": "^1.0.3"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^5.1.1",
