--- a/backend/composer.json
+++ b/backend/composer.json
@@ -7,12 +7,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "firebase/php-jwt": "^6.11",
         "illuminate/broadcasting": "*",
         "laravel/breeze": "^2.3",
         "laravel/fortify": "^1.25",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "phpseclib/phpseclib": "^3.0",
         "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
