--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "laravel-echo": "^2.1.4",
+    "moment": "^2.30.1",
     "pdfjs-dist": "^2.16.105",
     "pinia": "^3.0.2",
     "pusher-js": "^8.4.0",
