--- a/backend/composer.json
+++ b/backend/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-dompdf": "^3.1",
         "illuminate/broadcasting": "*",
         "laravel/breeze": "^2.3",
         "laravel/fortify": "^1.25",
